0.3.0-dev
  BugFix: Removed all xbps-install -f (force) commands.
  BugFix: Enable '*' char in the "Search/by file" option.
  BugFix: Void Linux RSS news page was outdated.
  BugFix: Files tab now shows file list of non installed packages.
  Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
	(without LXQt libs) and its use is mandatory in OctoXBPS.
  Added new icons to UI.
  Added new context menu option "Info" on pkg list.
  Added more information about packages on Info tab.

0.2.2
  BugFix: Reset ProgressWidget range value to 100, so transactions could update 
	percentages once again.

0.2.1
  BugFix: Clicking notifier hides OctoXBPS when it's running.
  BugFix: Notifier was not starting OctoXBPS when action was triggered.

0.2.0
  BugFix: Block some events while executing a transaction.
  BugFix in parser code.
  BugFix in Files tab retrieve.
  BugFix in 'edit' context menu.
  Now Files tab shows progress bar.
  Faster Transaction dialog and it saves its size between calls.
  Now pkg list shows non installed packages.
  Added an update notifier to OctoXBPS, the OctoXBPS notifier!
  Added shortcut text to all button tooltips.
  Added 'xbps-remove -O' for cache clean in XBPS.
  Added dependencies list for non installed pkgs.
  Added Search by description option in menu.
  Added support for lxqt-sudo (but it removes "run in terminal mode").

0.1.0 
  Initial Proof of Concept release.