@@ -3,6 +3,7 @@
   BugFix: Enable '*' char in the "Search/by file" option.
   BugFix: Void Linux RSS news page was outdated.
   BugFix: Files tab now shows file list of non installed packages.
+  BugFix: If there's xbps inside an upgrade, it is upgraded first.
   Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
 	(without LXQt libs) and its use is mandatory in OctoXBPS.
   Added new icons to UI.
